--- a/style.css
+++ b/style.css
@@ -180,9 +180,42 @@ span{
     text-align: center;
     margin: 5rem 0;
 }
+.about{
+    background: var(--second-bg-color);
+    color: black;
+}
+.about h2{
+    margin-bottom: 5rem;
+    color: white;
+}
+.about-box{
+    background-color: var(--main-color);
+    height: 500px;
+    border-radius: 3rem;
+    border: 5px solid transparent;
+}
+.about-box .about-info{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    max-height: 20px;
+    justify-content: left;
+    align-items: baseline;
+    padding: 5rem 5rem;
+}
+.about-info h4{
+    font-size: 2.5rem;
+    font-weight: 800;
+    line-height: 2;
+}
+.about-info p{
+    font-size: 3rem;
+    line-height: 2;
+    font-weight: 500;
+}
 .education{
     padding: 100px 15px;
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 .education h2{
     margin-bottom: 5rem;
@@ -207,5 +240,63 @@ span{
     border-radius: 4rem;
     box-shadow: 0 0 10px var(--main-color);
     cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+.experience{
+    background: var(--second-bg-color);
+    color: black;
+}
+.experience h2{
+    margin-bottom: 5rem;
+    color: white;
+}
+.experience-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+.experience-box{
+    background-color: var(--main-color);
+    height: 300px;
+    border-radius: 3rem;
+    border: 5px solid transparent;
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
+}
+.experience-box:hover{
+    background: white;
+    color: black;
+    border: 5px solid var(--main-color);
+    transform: scale(1.03);
+}
+.experience-box .experience-info{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    max-height: 200px;
+    justify-content: left;
+    align-items: baseline;
+    padding: 5rem 5rem;
+}
+.experience-info h4{
+    font-size: 3rem;
+    font-weight: 800;
+    line-height: 2
+}
+.contact{
+    background: var(--bg-color);
+}
+.social a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    background: transparent;
+    border: 5px var(--main-color);
+    font-size: 2.5rem;
+    border-radius: 50%;
+    color: var(--main-color);
+    margin: 3rem 3rem 3rem 3rem;
     transition: 0.3s ease-in-out;
 }
